tests/paczka1/small_fuzzy/55212540.err
Error in line 3: X9fZ3 S745 36,1
Error in line 13: 8Qr A796 27,8
